--- a/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -56,8 +56,52 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="ВопросыОтветы.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ВопросыОтветы.Designer.cs">
+      <DependentUpon>ВопросыОтветы.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Главное меню.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Главное меню.Designer.cs">
+      <DependentUpon>Главное меню.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Разделы.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Разделы.Designer.cs">
+      <DependentUpon>Разделы.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Регистрация.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Регистрация.Designer.cs">
+      <DependentUpon>Регистрация.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Редактор.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Редактор.Designer.cs">
+      <DependentUpon>Редактор.cs</DependentUpon>
+    </Compile>
+    <Compile Include="РедТест.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="РедТест.Designer.cs">
+      <DependentUpon>РедТест.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -73,6 +117,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Регистрация.resx">
+      <DependentUpon>Регистрация.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
