--- a/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Forms.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="User.cs" />
     <Compile Include="ВопросыОтветы.cs">
       <SubType>Form</SubType>
